--- a/.github/workflows/pre-push.yml
+++ b/.github/workflows/pre-push.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -e ".[deep]"
+          pip install -e .
           pip install black flake8 isort mypy bandit pytest pytest-cov
           pip install types-all || true
 
