--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,13 +46,19 @@ deep = [
     "torch>=1.9.0",
     "tensorflow>=2.6.0",
 ]
+docs = [
+    "sphinx>=7.0.0",
+    "sphinx-rtd-theme>=2.0.0",
+    "sphinx-autodoc-typehints>=1.24.0",
+    "myst-parser>=2.0.0",
+]
 all = [
-    "anomaly-detection-toolkit[deep]",
+    "anomaly-detection-toolkit[deep,docs]",
 ]
 
 [project.urls]
 Homepage = "https://github.com/kylejones200/anomaly-detection-toolkit"
-Documentation = "https://github.com/kylejones200/anomaly-detection-toolkit#readme"
+Documentation = "https://anomaly-detection-toolkit.readthedocs.io/"
 Repository = "https://github.com/kylejones200/anomaly-detection-toolkit"
 Issues = "https://github.com/kylejones200/anomaly-detection-toolkit/issues"
 
