--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,6 +3,9 @@ name: Publish to PyPI
 on:
   release:
     types: [published]
+  push:
+    tags:
+      - "v*"  # Trigger on version tags (e.g., v0.1.0, v1.0.0)
   workflow_dispatch:
     inputs:
       version:
