--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,8 +52,11 @@ docs = [
     "sphinx-autodoc-typehints>=1.24.0",
     "myst-parser>=2.0.0",
 ]
+viz = [
+    "signalplot>=0.1.0",
+]
 all = [
-    "anomaly-detection-toolkit[deep,docs]",
+    "anomaly-detection-toolkit[deep,docs,viz]",
 ]
 
 [project.urls]
